website/data/css/custom/footer.css
.footer-static {
  position: fixed;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 1rem;
  background-color: #efefef;
  text-align: center;
}

body{
        bottom: 0;
}

