Fixed overflow error and alter stuff
I fixed a buffer overflow error and altered stuff so it doesn't get to long.
Well it works i guess

--- a/website/data/css/custom/footer.css
+++ b/website/data/css/custom/footer.css
@@ -1,13 +1,15 @@
-.footer-static {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
+.footer-static{
+        position: fixed;
+        right: 0;
+        height: 50px;
+        bottom: 0px;
+        margin-bottom: 0px;
+        left: 0;
+        padding: 1rem;
+        background-color: #efefef;
+        text-align: center;
 }
 
 body{
-        bottom: 0;
+        margin-bottom: 55px;
 }
